<resources>
    <string name="app_name">Exam01</string>
    <string name="usernameText">用户名</string>
    <string name="passwordText">密码</string>
    <string name="maleText">男</string>
    <string name="femaleText">女</string>
    <string name="accountText">账号</string>
    <string name="rememberPasswordText">记住密码</string>
    <string name="autoLoginText">自动登录</string>
    <string name="forgetPasswordText">忘记密码</string>
    <string name="registerAccountText">注册账号</string>
    <string name="loadingText">Loading...</string>
    <string name="loginText">登录</string>
    <string name="phoneText">联系电话</string>
    <string name="bookText">书籍</string>
    <string name="sportText">运动</string>
    <string name="musicText">音乐</string>
    <string name="filmText">电影</string>
    <string name="confirmText">确定</string>
</resources>